patent updates + misc

--- a/rotary-waterblast-tools/bjv-pipe-cleaning.html
+++ b/rotary-waterblast-tools/bjv-pipe-cleaning.html
@@ -484,6 +484,13 @@ master-slider: yes
                 <li><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV Manual - Extended Life, up to 22k psi</a></li>
                 <li><a href="/assets/pdf/manuals/BJV-H9_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV Manual - 40k psi</a></li>
               </ul>
+              <h3><em style="text-transform: capitalize;">Discontinued Models</em></h3>
+              <ul class="list-unstyled basic">
+                <li><a href="/assets/pdf/manuals/BJV-M24_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-M24 Manual</a></li>
+                <li><a href="/assets/pdf/manuals/BJV-MP12_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-MP12 Manual</a></li>
+                <li><a href="/assets/pdf/manuals/BJV-P12_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-P12 Manual</a></li>
+                <li><a href="/assets/pdf/manuals/BJV-P16_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-P16 Manual</a></li>
+              </ul>
             </div>
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
