--- a/stoneage-patents.html
+++ b/stoneage-patents.html
@@ -32,45 +32,60 @@ permalink: /patents
     <tbody class="searchable">
       <tr>
         <td>2” Badger nozzle</td>
-        <td>BA-LK</td>
-        <td>8006920<br>8220724<br>D622810S</td>
-        <td>Europe:EP2387471B1<br>Taiwan: I378828<br>Australia: 2009354020<br>New Zealand: 594612<br>Canada: 2752748<br>China: ZL200980157707.0<br>Malaysia: MY159947A<br>Hong Kong: HK1162392</td>
+        <td>BA-LK</td><td>8006920<br>8220724<br>D622810<br>8016210<br>D617871<br>D631131<br>D626624<br>D639906</td>
+        <td>Australia: 2009354020<br>Canada: 2752748<br>China: ZL200980157707.0<br>Europe:EP2387471B1<br>Taiwan: I378828</td>
       </tr>
       <tr>
         <td>2” Warthog nozzle</td>
-        <td>WV-1/4; WU</td>
-        <td>8006920<br>8220724</td>
-        <td>Europe: EP2387471B1<br>Taiwan: I378828<br>Australia: 2009354020<br>New Zealand: 594612<br>Canada: 2752748<br>China: ZL200980157707.0<br>Malaysia: MY159947A<br>Hong Kong: HK1162392</td>
+        <td>WV-1/4; WU</td><td>8006920<br>8220724<br>D617871<br>D631131<br>D626624<br>D622810<br>D639906</td>
+        <td>Australia: 2009354020<br>Canada: 2752748<br>China: ZL200980157707.0<br>Europe: EP2387471B1<br>Taiwan: I378828</td>
+      </tr>
+      <tr>
+        <td>4” Badger nozzle</td>
+        <td>BAE - Extended Life</td><td>D900961</td>
+        <td>Brazil: BR302019001594-3<br>China: ZL201930190732.5<br>Europe: 006377743</td>
       </tr>
       <tr>
         <td>AutoBox ABX-2L, ABX-2LB</td>
         <td>ABX-2L, ABX-2LB</td>
         <td>9630801<br>9981822</td>
-        <td>Europe: EP3171993<br>Singapore: 11201700211Q<br/>Australia: 2015294517</td>
+        <td>Canada: 29554885<br>Europe: EP3171993</td>
       </tr>
       <tr>
         <td>AutoBox ABX-3L</td>
         <td>ABX-3L</td>
         <td>9896299<br>10,392,218</td>
-        <td></td>
+        <td>Brazil: BR112018072689-3 (pending)<br>Canada: 3023196 (pending)<br>Europe: 3452235</td>
       </tr>
       <tr>
         <td>AutoBox ABX-PRO</td>
         <td>ABX-PRO</td>
         <td>10272480</td>
-        <td>Taiwan: 1646300<br/>S. Korea: 10-2061469<br/>Canada: 3042555</td>
+        <td>Brazil: BR112019008679-0 (pending)<br>Canada: 3042555<br>China: 201780073067.X (pending)<br>Europe: 17877662.1 (pending)</td>
       </tr>
       <tr>
         <td>AutoBox Hose Guide Tube Assembly</td>
         <td>ABX-201</td>
-        <td>9400145<br>9662689<br>9964368</td>
+        <td>9964368</td>
         <td></td>
+      </tr>
+      <tr>
+        <td>AutoIndex</td>
+        <td>Remote controller</td>
+        <td>D870113</td>
+        <td>Australia: 201912256<br>Brazil: BR302019001775-0<br>China: ZL201930208843.4<br>Europe: 006392726</td>
+      </tr>
+      <tr>
+        <td>AutoStroke</td>
+        <td>Remote controller</td>
+        <td>16/663149 (pending)</td>
+        <td>Brazil: 112018005372-4<br>Canada: 2998499<br>Europe: 3362195</td>
       </tr>
       <tr>
         <td>Banshee nozzle</td>
         <td>BN</td>
-        <td>7,635,096<br>8006920<br>D617,870<br>D650,887<br>8434796</td>
-        <td>Europe: EP19633022B1<br>Taiwan: I378828<br>Australia: 2013207556<br>Canada: 2855878<br>China: ZL201410332208.3<br>Malaysia: MY167969A<br>New Zealand: 609599<br>Hong Kong: HK1203883</td>
+        <td>7,635,096<br>8006920<br>D617,870<br>D650,887<br>8434696<br>8016210</td>
+        <td>Australia: 2013207556<br>Canada: 2855878<br>China: ZL201410332208.3<br>Europe: EP19633022B1<br>Taiwan: I378828</td>
       </tr>
       <tr>
         <td>Barracuda</td>
@@ -81,26 +96,28 @@ permalink: /patents
       <tr>
         <td>Beetle nozzle</td>
         <td>BT</td>
-        <td>8006920<br>8220724<br>D724695</td>
-        <td>Europe: EP238747B1<br>Taiwan: I378828<br>Australia: 2009354020<br>New Zealand: 594919<br>Canada: 2752748<br>China:ZL200980157707.0<br>Malaysia: MY159947A<br>Hong Kong: HK1162392</td>
+        <td>8006920<br>8016210<br>8220724<br>D724695</td>
+        <td>Australia: 2009354020<br>Canada: 2752748<br>China: ZL200980157707.0<br>Europe: EP238747B1<br>Taiwan: I378828</td>
       </tr>
       <tr>
         <td>Boiler Tube Cleaner</td>
         <td>BTC</td>
-        <td>9950348<br>10265736</td>
-        <td></td>
+        <td>9950348<br>10265736<br>10898931</td>
+        <td>Canada: 2961768<br>China: ZL201580054293.4<br>Europe: 3204172<br>Singapore: 11201702173W</td>
       </tr>
+<!--
       <tr>
         <td>Cable Swivel Tool</td>
         <td>CST</td>
         <td>6085994</td>
         <td></td>
       </tr>
+-->
       <tr>
         <td>Dome Lance Positioner</td>
-        <td>DLP</td>
-        <td>10,809,023</td>
-        <td></td>
+        <td>DLP, DBP, PROP-DBP</td>
+        <td>10,809,023<br>11060806</td>
+        <td>Europe: 3601928</td>
       </tr>
       <tr>
         <td>Gopher</td>
@@ -112,13 +129,13 @@ permalink: /patents
         <td>Hose Containment System</td>
         <td>HCS</td>
         <td>10336571<br>10427907</td>
-        <td>China: ZL201680059939.2<br/>Europe: 336525881</td>
+        <td>Brazil: BR112018005370-8<br/>Canada: 2998928<br/>Europe: 336525881</td>
       </tr>
       <tr>
         <td>Lightweight Positioner</td>
         <td>LWP</td>
-        <td>10024613<br>8964368<br/>9662689</td>
-        <td>Europe: EP3172519B1<br>Singapore: 11201700244W</td>
+        <td>10024613<br>10684082</td>
+        <td>Australia: 2015292711<br>Canada: 2955049<br>Europe: EP3172519B1<br>Singapore: 11201700244W</td>
       </tr>
       <tr>
         <td>Lightweight Striker</td>
@@ -129,21 +146,23 @@ permalink: /patents
       <tr>
         <td>Navigator</td>
         <td>NAV-100</td>
-        <td>9950348<br>10265736</td>
+        <td>9950348<br>10265736<br>10933453</td>
         <td></td>
       </tr>
       <tr>
         <td>ProDrain</td>
         <td>PRO-700</td>
-        <td>10,272,480</td>
-        <td>Taiwan: 164300</td>
+        <td>1071027</td>
+        <td>Canada: 3016478 (pending)<br>Europe: 17770828.6 (pending)</td>
       </tr>
+<!--
       <tr>
         <td>Sabertooth</td>
         <td>SRT-100, SBT-20k</td>
         <td>8720811</td>
         <td></td>
       </tr>
+-->
       <tr>
         <td>Scorpion</td>
         <td></td>
@@ -154,27 +173,26 @@ permalink: /patents
         <td>Spitfire</td>
         <td>SPFR</td>
         <td>8006920<br>8544768<br>8220724<br>9067220</td>
-        <td>Europe: EP2393602<br>Australia: 2010319761<br>Canada: 2753651<br>China: ZL201080015071.9<br>New Zealand: 594919<br>Hong Kong: HK1163594<br>Malaysia: MY160550A</td>
+        <td>Australia: 2010319761<br>Canada: 2753651<br>China: ZL201080015071.9<br>Europe: EP2393602<br>Malaysia: MY160550A</td>
       </tr>
       <tr>
         <td>Striker</td>
         <td>SKR</td>
         <td>9610603<br>9919333</td>
-        <td>Europe: EP3242753B1<br>China: ZL201680005201.8<br>Singapore: 11201704676P</td>
+        <td>Canada: 2970722<br>Europe: EP3242753B1</td>
       </tr>
       <tr>
         <td>Warthog Magnum</td>
         <td>WGR; WHR</td>
         <td>10,118,185</td>
-        <td>Europe: EP3169454B1<br>New Zealand: 724042</td>
+        <td>Canada: 2954772<br>China: ZL.201580043888.X<br>Europe: EP3169454B1<br>Singapore: 11201700183X</td>
       </tr>
       <tr>
         <td>Warthog Switcher</td>
-        <td>WGR-SWT, WHR-SWT</td>
-        <td>9395001<br>9702136<br>9845594<br>10,118,185</td>
-        <td>Europe: EP3169454B1, EP3120056B1<br>Australia: 2015231884<br>Canada: 2941243<br>China: ZL201580013935.6<br>New Zealand: 724042, 732671</td>
+        <td>WGR-SWT, WHR-SWT</td><td>9395001<br>9702136<br>9845594<br>10,118,185<br>8667987<br>9022057<br>8863775</td>
+        <td>Australia: 2015231884, 2012218083, 2015246088, 2017203531<br>Canada: 2941243, 2825718<br>Europe: EP3169454B1, EP3120056B1, EP2676058</td>
       </tr>
     </tbody>
   </table>
-  <p><span class="grey">Updated: October 9, 2020</span><br><em>StoneAge patent information can be found on the web at <a href="http://www.sapatents.com">www.sapatents.com</a></em></p>
+  <p><span class="grey">Updated: July 22, 2021</span><br><em>StoneAge patent information can be found on the web at <a href="http://www.sapatents.com">www.sapatents.com</a></em></p>
 </section>
