--- a/waterblast-automation/autobox-abx-pro.html
+++ b/waterblast-automation/autobox-abx-pro.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 page-type: product
-title: StoneAge AutoBox ABX-PRO Hose Feed for Pipe Cleaning
-excerpt: The AutoBox ABX-PRO is a hose feed tractor for small diameter pipe cleaning engineered with safety, portability and quick set-up in mind.
+title: StoneAge ProDrive (AutoBox ABX-PRO) Hose Feed for Pipe Cleaning
+excerpt: The ProDrive is a hose feed tractor for small diameter pipe cleaning engineered with safety, portability and quick set-up in mind.
 permalink: /abx-pro
 master-slider: yes
 ---
@@ -13,7 +13,7 @@ master-slider: yes
     <ul class="breadcrumb">
       <li><a href="/">Home</a></li>
       <li><a href="/waterblast-tools-automated-equipment">Waterblast Tools &amp; Equipment</a></li>
-      <li class="active">AutoBox ABX-PRO</li>
+      <li class="active">ProDrive</li>
     </ul> 
   </div>
 </div>
@@ -51,7 +51,7 @@ master-slider: yes
 
     <div class="col-md-7 padding-left-60">
       <div class="product-heading">
-        <h1>AutoBox ABX-PRO</h1>
+        <h1>ProDrive<sup>®</sup></h1>
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
@@ -63,7 +63,7 @@ master-slider: yes
       <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="/autopack-prop" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>
       
       <p class="product-description"><strong>StoneAge hose tractors eliminate the need for hand lancing, increasing safety and delivering consistent repeatable results for greater productivity.</strong></p>
-      <p>The AutoBox ABX-PRO (ProDrive) is a hose feed tractor engineered with safety, portability and quick setup in mind. This versatile device is designed with multiple mounting options and accessories to adapt it for a wide variety of pipe, drain and tube cleaning applications.</p>
+      <p>The ProDrive (AutoBox ABX-PRO) is a hose feed tractor engineered with safety, portability and quick setup in mind. This versatile device is designed with multiple mounting options and accessories to adapt it for a wide variety of pipe, drain and tube cleaning applications.</p>
       <p>The ABX-PRO is the perfect tool for limited access applications and includes a lightweight control box for increased safety and mobility.</p>
       
       <h2>Features</h2>
@@ -168,13 +168,13 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
-            <li><a href="/assets/pdf/manuals/ABX-PRO_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-PRO Manual</a></li>
+            <li><a href="/assets/pdf/manuals/ABX-PRO_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ProDrive (ABX-PRO) Manual</a></li>
           </ul>
         </div>
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-PRO Tool Talk</a></li>
+            <li><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ProDrive (ABX-PRO) Tool Talk</a></li>
           </ul>
         </div>
         <aside class="col-sm-3 col-sm-offset-1 aside-box">
@@ -195,7 +195,7 @@ master-slider: yes
               </a>
             </div>
             <!-- End Lightbox call -->
-            <p class="caption">ABX-PRO Pipe Cleaning</p>
+            <p class="caption">ProDrive Pipe Cleaning</p>
           </div>
           <div class="col-sm-4 col-centered">
             <!-- Lightbox call -->
@@ -205,7 +205,7 @@ master-slider: yes
               </a>
             </div>
             <!-- End Lightbox call -->
-            <p class="caption">ABX-PRO Drain Cleaning</p>
+            <p class="caption">ProDrive Drain Cleaning</p>
           </div>
           <div class="col-sm-4 col-centered">
             <!-- Lightbox call -->
@@ -215,7 +215,7 @@ master-slider: yes
               </a>
             </div>
             <!-- End Lightbox call -->
-            <p class="caption">ABX-PRO Exchanger Cleaning</p>
+            <p class="caption">ProDrive Exchanger Cleaning</p>
           </div>
           <div class="col-sm-4 col-centered">
             <!-- Lightbox call -->
@@ -225,7 +225,7 @@ master-slider: yes
               </a>
             </div>
             <!-- End Lightbox call -->
-            <p class="caption">ABX-PRO Surface Cleaning</p>
+            <p class="caption">ProDrive Surface Cleaning</p>
           </div>
           <div class="col-sm-4 col-centered">
             <!-- Lightbox call -->
@@ -235,7 +235,7 @@ master-slider: yes
               </a>
             </div>
             <!-- End Lightbox call -->
-            <p class="caption">ABX-PRO Overview</p>
+            <p class="caption">ProDrive Overview</p>
           </div>
         </div>
       </section>
@@ -395,7 +395,7 @@ master-slider: yes
     <div class="col-md-7">
 
         <h2>Automated Hose Feed for Pipe Cleaning</h2>
-        <p>Lightweight and portable, the ABX-PRO is the perfect tool for limited access pipe cleaning applications.</p>
+        <p>Lightweight and portable, the ProDrive is the perfect tool for limited access pipe cleaning applications.</p>
     </div>
     <div class="col-md-4 col-md-offset-1">
       <table>
