--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -101,7 +101,7 @@ permalink: /waterblast-tools-automated-equipment
         <table class="table">
           <tbody>
             <tr>
-              <td colspan="2" style="text-align:center;">Built around ABX-PRO</td>
+              <td colspan="2" style="text-align:center;">Built around ProDrive</td>
             </tr>
             <tr>
               <td colspan="2" style="text-align:center;">Single lance tube cleaning</td>
@@ -120,7 +120,7 @@ permalink: /waterblast-tools-automated-equipment
         <table class="table">
           <tbody>
             <tr>
-              <td colspan="2" style="text-align:center;">Built around ABX-PRO</td>
+              <td colspan="2" style="text-align:center;">Built around ProDrive</td>
             </tr>
             <tr>
               <td colspan="2" style="text-align:center;">Small pipe &amp; drain cleaning</td>
@@ -216,8 +216,8 @@ permalink: /waterblast-tools-automated-equipment
     <div class="mix pipe-cleaning exchanger-cleaning" data-name="abx-pro" data-designation="automated">
       <a href="/abx-pro" class="search-text">
         <img src="/assets/img/product/abx-pro-02.jpg" class="img-responsive" />
-        <h3>AutoBox ABX-PRO</h3>
-        <h5>Hose feed tractor</h5>
+        <h3>ProDrive</h3>
+        <h5>AutoBox ABX-PRO hose feed tractor</h5>
         <table class="table">
           <tbody>
             <tr>
@@ -340,7 +340,7 @@ permalink: /waterblast-tools-automated-equipment
       <a href="/propositioner" class="search-text">
         <img src="/assets/img/product/propositioner-01.jpg" class="img-responsive" />
         <h3>ProPositioner</h3>
-        <h5>For AutoBox ABX-PRO</h5>
+        <h5>For ProDrive</h5>
         <table class="table">
           <tbody>
             <tr>
@@ -530,8 +530,8 @@ permalink: /waterblast-tools-automated-equipment
     <div class="mix pipe-cleaning exchanger-cleaning" data-name="abx-pro" data-designation="automated">
       <a href="/abx-pro" class="search-text">
         <img src="/assets/img/product/abx-pro-02.jpg" class="img-responsive" />
-        <h3>AutoBox ABX-PRO</h3>
-        <h5>Hose feed tractor</h5>
+        <h3>ProDrive</h3>
+        <h5>AutoBox ABX-PRO hose feed tractor</h5>
         <table class="table">
           <tbody>
             <tr>
@@ -556,7 +556,7 @@ permalink: /waterblast-tools-automated-equipment
         <table class="table">
           <tbody>
             <tr>
-              <td colspan="2" style="text-align:center;">Built around ABX-PRO</td>
+              <td colspan="2" style="text-align:center;">Built around ProDrive</td>
             </tr>
             <tr>
               <td colspan="2" style="text-align:center;">Small pipe, drain, tube cleaning</td>
@@ -643,7 +643,7 @@ permalink: /waterblast-tools-automated-equipment
             </tr>
             <tr>
               <th>Works with</th>
-              <td>ABX-PRO hose tractor</td>
+              <td>ProDrive hose tractor</td>
             </tr>
           </tbody>
         </table>
@@ -1892,7 +1892,7 @@ permalink: /waterblast-tools-automated-equipment
         <table class="table">
           <tbody>
             <tr>
-              <th colspan="2" style="text-align:center;">Strap mount for AutoBox ABX-PRO</th>
+              <th colspan="2" style="text-align:center;">Strap mount for ProDrive</th>
             </tr>
             <tr>
               <td colspan="2" style="text-align:center;">For pipes with no flange</td>
@@ -2093,7 +2093,7 @@ permalink: /waterblast-tools-automated-equipment
             </tr>
             <tr>
               <th>Works with</th>
-              <td>ABX-PRO hose tractor</td>
+              <td>ProDrive hose tractor</td>
             </tr>
           </tbody>
         </table>
@@ -2105,7 +2105,7 @@ permalink: /waterblast-tools-automated-equipment
       <a href="/propositioner" class="search-text">
         <img src="/assets/img/product/propositioner-01.jpg" class="img-responsive" />
         <h3>ProPositioner</h3>
-        <h5>For AutoBox ABX-PRO</h5>
+        <h5>For ProDrive</h5>
         <table class="table">
           <tbody>
             <tr>
