--- a/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
@@ -278,8 +278,9 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
-                <li><a href="/assets/pdf/manuals/BAE_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;4" Badger Manual</a></li>
+                <li><a href="/assets/pdf/manuals/BAE_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;4" Badger Manual - Extended Life</a></li>
                 <li><a href="/assets/pdf/manuals/BA-H6_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;4" Badger Manual - 44k</a></li>
+                <li><a href="/assets/pdf/manuals/BA_4inch_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;4" Badger Manual</a> <em>(Discontinued)</em></li>
               </ul>
             </div>
             <div class="col-sm-4">
