--- a/waterblast-automation/compass.html
+++ b/waterblast-automation/compass.html
@@ -75,7 +75,7 @@ master-slider: yes
         <h3>Compatible with:</h3><a class="btn" href="/abx-pro" data-toggle="tooltip" title="AutoBox ABX-PRO">PRO</a> <a class="btn" href="/banshee" data-toggle="tooltip" title="Banshee">BN</a> <a class="btn" href="/beetle" data-toggle="tooltip" title="Beetle">BT</a>
       </div>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
+      <a href="https://info.stoneagetools.com/l/644393/2021-07-12/39pcd9" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Watch Full Overview Video</a>
 
   </div>
 
