--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -49,6 +49,9 @@
 <div id="cam-uni-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/z9PJYrXPePI?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
+<div id="compass-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/1OIb_vLBj7E?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
 <div id="hcs-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/sPuawSvBtDA?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
