--- a/waterblast-automation/compass.html
+++ b/waterblast-automation/compass.html
@@ -31,7 +31,7 @@ master-slider: yes
           <div class="ms-slide">
             <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/compass-01.jpg" alt="StoneAge Compass no-entry domed bundle cleaning">
             <img class="ms-thumb" src="/assets/img/product/thumb-compass-01.jpg" alt="thumb">
-<!--              <a data-type="video" href="https://www.youtube.com/embed/PwEAwYsxAMc?rel=0"> </a>-->
+              <a data-type="video" href="https://www.youtube.com/embed/1OIb_vLBj7E?rel=0"> </a>
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/compass-02.jpg" alt="StoneAge Compass no-entry domed bundle cleaning">
@@ -75,7 +75,8 @@ master-slider: yes
         <h3>Compatible with:</h3><a class="btn" href="/abx-pro" data-toggle="tooltip" title="AutoBox ABX-PRO">PRO</a> <a class="btn" href="/banshee" data-toggle="tooltip" title="Banshee">BN</a> <a class="btn" href="/beetle" data-toggle="tooltip" title="Beetle">BT</a>
       </div>
 
-      <a href="https://info.stoneagetools.com/l/644393/2021-07-12/39pcd9" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Watch Full Overview Video</a>
+      <a href="https://info.stoneagetools.com/l/644393/2020-07-06/249rq4" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="400" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Request a Personalized Demo</a>
+      <a href="https://info.stoneagetools.com/l/644393/2021-07-12/39pcd9" style="margin-top:0; font-style: italic; text-align: center; display: block; width: 100%;">Click here for full overview video</a>
 
   </div>
 
@@ -90,7 +91,7 @@ master-slider: yes
       <ul>
         <li><a href="#section-bar-1"><span>Specifications</span></a></li>
         <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
-<!--        <li><a href="#section-bar-3"><span>Videos</span></a></li>-->
+        <li><a href="#section-bar-3"><span>Videos</span></a></li>
 <!--        <li><a href="#section-bar-4"><span>Service Kits</span></a></li>-->
       </ul>
     </nav>
@@ -160,21 +161,21 @@ master-slider: yes
         </aside>
       </section>
 
-      <!-- Videos 
+      <!-- Videos -->
       <section id="section-bar-3">
         <div class="row row-centered">
           <div class="col-sm-4 col-centered">
-            <!-- Lightbox call 
+            <!-- Lightbox call -->
             <div>
-              <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #nav-vid">
-                <img src="/assets/vid/thumb/nav-vid.png" alt="Navigator Overview video" class="img-responsive" />
+              <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #compass-vid">
+                <img src="/assets/vid/thumb/compass-overview-vid.jpg" alt="Compass Overview video" class="img-responsive" />
               </a>
             </div>
-            <!-- End Lightbox call 
-            <p class="caption">Navigator Overview</p>
+            <!-- End Lightbox call -->
+            <p class="caption">Compass Overview</p>
           </div>
         </div>
-      </section> -->
+      </section>
 
     </div><!-- /content -->
   </div><!-- /tabs -->
@@ -218,8 +219,8 @@ master-slider: yes
   <div class="container padding-tb-30">
     <div class="col-md-7">
 
-        <h2>No-Entry Domed Bundle Tube Cleaning</h2>
-        <p>The Compass eliminates confined space entry cleaning of high-pressure tubes in domed heat exchanger bundles.</p>
+        <h2>Domed Bundle Tube Cleaning</h2>
+        <p>The Compass eliminates manual cleaning of high-pressure tubes in confined heat exchanger bundles.</p>
     </div>
     <div class="col-md-4 col-md-offset-1">
       <table>
