--- a/manuals.html
+++ b/manuals.html
@@ -84,13 +84,13 @@ permalink: /manuals
               <tr>
                 <td><a href="/abx-pro">ABX-PRO</a></td>
                 <td>AUTOBOX ABX-PRO<br>Hose drive for small pipe cleaning, sometimes referred to as PRODRIVE</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABX-PRO_manual.pdf" target="_blank" class="btn btn-sm">PL 612</a><br><small class="grey">Updated: 05/2021</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-PRO_manual.pdf" target="_blank" class="btn btn-sm">PL 612</a><br><small class="grey">Updated: 08/2021</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/ABX-PRO_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 11/2020</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/abx-pro">AK-2L, AK-3L</a></td>
+                <td><a href="/air-knife">AK-2L, AK-3L</a></td>
                 <td>AIR KNIFE<br>For use with AutoBox hose tractors</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/Air_Knife_Manual.pdf" target="_blank" class="btn btn-sm">PL 664</a><br><small class="grey">Updated: 06/2018</small></td>
                 <td class="text-center"></td>
