--- a/sentinel-lp/sentinel.html
+++ b/sentinel-lp/sentinel.html
@@ -132,7 +132,7 @@
     <div id="w-node-_7a9390b4-ff4a-7543-57d5-e490bb81577d-866c6dab" data-w-id="7a9390b4-ff4a-7543-57d5-e490bb81577d" style="opacity:0" class="content-block">
       <h1 class="heading-1">Today&#x27;s jobs demand advanced equipment &amp; results.</h1>
       <p class="p-body"><strong>AUTOBOX 3L with Sentinel Automation Technology</strong> cleans heat exchangers faster, safer, easier, and more precisely.<br></p>
-      <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="480" class="btn w-button">Schedule a virtual overview</a>
+      <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="480" class="btn w-button">Schedule a demo</a>
       <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #sentinel-overview-vid" class="link-block w-inline-block">
         <p class="minicta-icon"></p>
         <p class="minicta-text">Watch the video</p>
@@ -158,7 +158,7 @@
         <div data-w-id="6e715a76-5eee-88dc-e18e-153ba81f4be3" style="opacity:0" class="content-block content-right">
           <h1 class="heading-1">The Future of Exchanger Tube Cleaning</h1>
           <p class="p-body">Sentinel Automation Technology seamlessly integrates with StoneAge&#x27;s AutoBox 3L tractor and uses an active sensor system to automatically position the cleaning nozzles and clean exchanger tubes end to end, even in difficult low visibility conditions.<br></p>
-          <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="480" class="btn w-button">Schedule a virtual overview</a>
+          <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="480" class="btn w-button">Schedule a demo</a>
         </div>
       </div>
     </div>
@@ -188,8 +188,8 @@
   <section id="cards-section" class="plan">
     <div class="centered-container w-container">
       <h2 class="heading-1">Plant expectations are high. Don’t be held back. </h2>
-      <p class="p-body width-80">We make it easy to put the future of industrial cleaning in your hands. Schedule a virtual overview to see how Sentinel  works to increase safety, productivity &amp; profitability.</p>
-      <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="480" class="btn w-button" style="margin-bottom:120px;">Schedule a virtual overview</a>
+      <p class="p-body width-80">We make it easy to put the future of industrial cleaning in your hands. Schedule a demo to see how Sentinel  works to increase safety, productivity &amp; profitability.</p>
+      <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="480" class="btn w-button" style="margin-bottom:120px;">Schedule a demo</a>
 <!--
       <div class="cards-grid-container">
         <div id="w-node-_2335f469-1683-32f9-788a-67ad644679ff-866c6dab" data-w-id="2335f469-1683-32f9-788a-67ad644679ff" style="opacity:0" class="card">
@@ -197,7 +197,7 @@
             <h3 class="heading-2 red no-margin">1</h3>
           </div>
           <div class="card-frame">
-            <h3 class="heading-3 tighter">Schedule a virtual overview</h3>
+            <h3 class="heading-3 tighter">Schedule a demo</h3>
             <p class="p-400">See how Sentinel  works to increase safety, productivity &amp; profitability</p>
           </div>
         </div>
@@ -250,7 +250,7 @@
           <p class="options-text">Try out Sentinel-enabled AutoBox 3L with 22k and 40k rental packages adapted for metric and imperial usage.</p>
         </div>
         <div id="w-node-_54a483cc-5471-5b96-3279-96dac053b934-866c6dab" class="div-block-6">
-          <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="480" class="btn w-button">Schedule a virtual overview</a>
+          <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="480" class="btn w-button">Schedule a demo</a>
         </div>
       </div>
     </div>
@@ -295,7 +295,7 @@
         </a>
         <div id="w-node-c594c71f-0c36-b5b0-6337-dfde25150e7e-866c6dab" class="docs-cta">
           <p class="minivp-text"><span class="text-span-2"><strong>Ready to transform your industrial heat exchanger cleaning services?</strong> <br></span>A StoneAge representative can walk you through all the details of the Sentinel-enabled AutoBox 3L system and answer your questions.</p>
-          <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="500" data-featherlight-iframe-width="480" class="btn w-button">Schedule a virtual overview</a>
+          <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="500" data-featherlight-iframe-width="480" class="btn w-button">Schedule a demo</a>
         </div>
         <div id="w-node-_3fc906d1-212b-e7c2-8720-1cf33e402d79-866c6dab" data-w-id="3fc906d1-212b-e7c2-8720-1cf33e402d79" style="opacity:0" class="docs-cta"></div>
       </div>
