--- a/loc-ohio.html
+++ b/loc-ohio.html
@@ -62,9 +62,9 @@ contact-ohio: yes
         <h3 class="section-heading">Outside Sales</h3>
         <div class="row">
           <div class="col-sm-6">
-            <p><strong>Mike Taylor</strong><br/>
-              Director of North American Sales<br/>
-            <a href="mailto:mike.taylor@stoneagetools.com">mike.taylor@stoneagetools.com</a></p>
+            <p><strong>Jennifer Jocke</strong><br/>
+              Northwest Regional Solutions Manager<br/>
+            <a href="mailto:jennifer.jocke@stoneagetools.com">jennifer.jocke@stoneagetools.com</a></p>
           </div>
         </div>
 
