--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -143,7 +143,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">M7, 1/16 NPT, 1/4-28 MP LH &amp; RH</td>
+                      <td colspan="2">M7, 1/16 NPT, 1/4-28 MP LH &amp; RH,<br>5/16-24 RH</td>
                     </tr>
                     <tr>
                       <th>Tool Diameter</th>
