update Sentinel LP for launch

--- a/sentinel-lp/sentinel-01.html
+++ b/sentinel-lp/sentinel-01.html
@@ -153,12 +153,12 @@
     </div>
   </div>
   <div class="stakes">
-    <div class="w-layout-grid stakes-grid"><img src="images/Sentinel_FullSystem_View1_sm.png" loading="lazy" id="w-node-_59cd4c85-6dbd-e6b2-3c83-ae8dc4e98d89-866c6dab" sizes="(max-width: 1200px) 100vw, 1200px" alt="Sentinel equipment package for automated exchanger tube cleaning" srcset="images/Sentinel_FullSystem_View1_sm-p-500.png 500w, images/Sentinel_FullSystem_View1_sm-p-800.png 800w, images/Sentinel_FullSystem_View1_sm-p-1080.png 1080w, images/Sentinel_FullSystem_View1_sm.png 1200w" class="stakes-image">
+    <div class="w-layout-grid stakes-grid"><img src="images/Family_Opener_Far_Alpha_02.png" loading="lazy" id="w-node-_59cd4c85-6dbd-e6b2-3c83-ae8dc4e98d89-866c6dab" sizes="(max-width: 1920px) 100vw, 1920px" alt="Sentinel equipment package for automated exchanger tube cleaning" srcset="images/Family_Opener_Far_Alpha_02-p-500.png 500w, images/Family_Opener_Far_Alpha_02-p-800.png 800w, images/Family_Opener_Far_Alpha_02-p-1080.png 1080w, images/Family_Opener_Far_Alpha_02-p-1600.png 1600w, images/Family_Opener_Far_Alpha_02.png 1920w" class="stakes-image">
       <div id="w-node-a70c88d7-3a52-4f32-a2fa-520dfdcc4e82-866c6dab" class="stakes-content">
         <div data-w-id="6e715a76-5eee-88dc-e18e-153ba81f4be3" style="opacity:0" class="content-block content-right">
           <h1 class="heading-1">The Future of Exchanger Tube Cleaning</h1>
           <p class="p-body">Sentinel Automation Technology seamlessly integrates with StoneAge&#x27;s AutoBox 3L tractor and uses an active sensor system to automatically position the cleaning nozzles and clean exchanger tubes end to end, even in difficult low visibility conditions.<br></p>
-          <a href="#" class="btn w-button">Schedule a virtual overview</a>
+          <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="480" class="btn w-button">Schedule a demo</a>
         </div>
       </div>
     </div>
@@ -185,31 +185,20 @@
       </div>
     </div>
   </section>
-  <section id="cards-section" class="plan wf-section">
+  <section id="cards-section" class="plan">
     <div class="centered-container w-container">
-      <h2 class="heading-1">Next generation automation and data insights</h2>
-      <p class="p-body width-80">Reduce costs and improve asset utilization with <strong>Sentinel Link</strong> job data.</p>
-      <div class="w-layout-grid grid-2">
-        <div><img src="images/data_tubes_02.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 577px) 93vw, 537px" srcset="images/data_tubes_02-p-500.jpeg 500w, images/data_tubes_02.jpg 537w" alt="Real-time exchanger cleaning job data" class="data-thumbs">
-          <div class="p-400">Real time job data to optimize cleaning productivity and minimize downtime</div>
-        </div>
-        <div><img src="images/data_pressure_01.jpg" loading="lazy" alt="Pressure data for exchanger cleaning jobs" class="data-thumbs">
-          <div class="p-400">Monitor asset utilization to reduce fuel, water consumption, and job costs</div>
-        </div>
-        <div><img src="images/data_utilization_02.jpg" loading="lazy" alt="Utilization data for exchanger cleaning jobs" class="data-thumbs">
-          <div class="p-400">Utilize historical data for accurate bidding and cost savings</div>
-        </div>
-      </div>
-      <h2 class="heading-1">Plant expectations are high - don’t be held back</h2>
-      <p class="p-body width-80">Put the future of industrial cleaning in your hands and tackle every job with confidence and a clear plan for success. </p>
+      <h2 class="heading-1">Plant expectations are high. Don’t be held back. </h2>
+      <p class="p-body width-80">Put the future of industrial cleaning in your hands. Tackle every exchanger cleaning job with confidence and a clear plan for success.</p>
+      <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="480" class="btn w-button" style="margin-bottom:120px;">Schedule a demo</a>
+<!--
       <div class="cards-grid-container">
         <div id="w-node-_2335f469-1683-32f9-788a-67ad644679ff-866c6dab" data-w-id="2335f469-1683-32f9-788a-67ad644679ff" style="opacity:0" class="card">
           <div class="round">
             <h3 class="heading-2 red no-margin">1</h3>
           </div>
           <div class="card-frame">
-            <h3 class="heading-3 tighter">Schedule a virtual overview</h3>
-            <p class="p-400">See how Sentinel works to increase safety, productivity &amp; profitability</p>
+            <h3 class="heading-3 tighter">Schedule a demo</h3>
+            <p class="p-400">See how Sentinel  works to increase safety, productivity &amp; profitability</p>
           </div>
         </div>
         <div id="w-node-_2335f469-1683-32f9-788a-67ad64467a06-866c6dab" data-w-id="2335f469-1683-32f9-788a-67ad64467a06" style="opacity:0" class="card">
@@ -231,7 +220,7 @@
           </div>
         </div>
       </div>
-      <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="480" class="btn w-button" style="margin-bottom:120px;">Schedule a demo</a>
+-->
     </div>
 <!--
     <div class="options-container w-container">
@@ -258,10 +247,10 @@
         </div>
         <div>
           <h1 class="heading-5">Rental Packages </h1>
-          <p class="options-text">Try out Sentinel-enabled AutoBox 3L rental packages adapted for metric and imperial usage.</p>
+          <p class="options-text">Try out Sentinel-enabled AutoBox 3L with 22k and 40k rental packages adapted for metric and imperial usage.</p>
         </div>
         <div id="w-node-_54a483cc-5471-5b96-3279-96dac053b934-866c6dab" class="div-block-6">
-          <a href="#" class="btn w-button">Schedule a virtual overview</a>
+          <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="480" class="btn w-button">Schedule a demo</a>
         </div>
       </div>
     </div>
