misc updates ABX 2L, 3L

--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -30,11 +30,7 @@ master-slider: yes
           <div class="ms-slide">
             <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/abx-2l-01.jpg" alt="AutoBox ABX-2L exchanger cleaning system">
             <img class="ms-thumb" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="thumb">
-              <a data-type="video" href="https://www.youtube.com/embed/g-o16eETv74"> </a>
-          </div>
-          <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/abx-2l-02.jpg" alt="AutoBox ABX-2L exchanger cleaning system">
-            <img class="ms-thumb" src="/assets/img/product/thumb-abx-2l-02.jpg" alt="thumb">
+              <a data-type="video" href="https://www.youtube.com/embed/rJkYoPp5jmc"> </a>
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/abx-2l-03.jpg" alt="AutoBox ABX-2L exchanger cleaning system">
@@ -193,26 +189,6 @@ master-slider: yes
           <!-- Videos -->
           <section id="section-bar-3">
             <div class="row row-centered">
-              <div class="col-sm-4 col-centered">
-                <!-- Lightbox call -->
-                <div>
-                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #abx-2l-vid">
-                    <img src="/assets/vid/thumb/abx-2l-vid.png" alt="ABX-2L Overview video" class="img-responsive" />
-                  </a>
-                </div>
-                <!-- End Lightbox call -->
-                <p class="caption">ABX-2L Overview</p>
-              </div>
-              <div class="col-sm-4 col-centered">
-                <!-- Lightbox call -->
-                <div>
-                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #abx-2l-train-vid">
-                    <img src="/assets/vid/thumb/abx-2l-train-vid.png" alt="ABX-2L Training video" class="img-responsive" />
-                  </a>
-                </div>
-                <!-- End Lightbox call -->
-                <p class="caption">ABX-2L Training</p>
-              </div>
               <div class="col-sm-4 col-centered">
                 <!-- Lightbox call -->
                 <div>
