--- a/waterblast-automation/autopack-3l.html
+++ b/waterblast-automation/autopack-3l.html
@@ -164,6 +164,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
+            <li><a href="/assets/pdf/manuals/AutoPack-3L.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;AutoPack-3L Manuals (Binder)</a></li>
             <li><a href="/assets/pdf/manuals/ABX-3L_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-3L Manual</a></li>
             <li><a href="/assets/pdf/manuals/LWP-500-V2_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;Lightweight Positioner Manual</a></li>
           </ul>
