--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -23,8 +23,14 @@
 <div id="training-overview">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/d33GriKmZQ4?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
-<div id="ageOfControl-2inBA">
-  <iframe width="854" height="480" src="https://player.vimeo.com/video/353393142" frameborder="0" allowfullscreen></iframe>
+<div id="sentinel-lms">
+  <iframe width="854" height="480" src="https://www.stoneagetools.com/assets/vid/LMS_sign-in_Sentinel.mp4" frameborder="0" allowfullscreen></iframe>
+</div>
+<div id="sentinel-success">
+  <iframe width="854" height="480" src="https://www.stoneagetools.com/assets/vid/Sentinel_Success_Intro.mp4" frameborder="0" allowfullscreen></iframe>
+</div>
+<div id="sentinel-check">
+  <iframe width="854" height="480" src="https://www.stoneagetools.com/assets/vid/Sentinel_system_check.mp4" frameborder="0" allowfullscreen></iframe>
 </div>
 
 <!-- WB -->
